--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'java'
 
 dependencies {
-    compile 'com.google.android:android:+'
+    compile 'com.google.android:android:2.3.3'
 }
