--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'java'
 
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
 dependencies {
     compile 'com.google.android:android:2.3.3'
 }
